--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+image = "0.25.5"
 itertools = "0.13.0"
 nalgebra = "0.33.2"
 regex = "1.11.1"
